objects/amc__Program__c.object
<CustomObject>
    <description>The Program Object captures high-level information relation to a strategic program. The Program can comprise of multiple Projects.</description>
    <fields>
        <fullName>amc__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Account this Program relates to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Objectives__c</fullName>
        <inlineHelpText>Details of the Objectives this Program is looking to achieve</inlineHelpText>
        <label>Objectives</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Priority__c</fullName>
        <inlineHelpText>Identifies the Priority of the Program</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Program_Notes__c</fullName>
        <inlineHelpText>Detailed notes on the Program</inlineHelpText>
        <label>Program Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Program_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the person responsible for the Program</inlineHelpText>
        <label>Program Owner</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Program_Reference__c</fullName>
        <inlineHelpText>Internal reference number for the Program</inlineHelpText>
        <label>Program Reference #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Status__c</fullName>
        <inlineHelpText>Identifies the status of the Program</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Account__c</columns>
        <columns>amc__Program_Owner__c</columns>
        <columns>amc__Program_Reference__c</columns>
        <columns>amc__Status__c</columns>
        <columns>amc__Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>